--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="static/favicon.ico">
     <script type="text/javascript" src="http://echarts.baidu.com/gallery/vendors/jquery/jquery.js"></script>
+    <script src="http://api.map.baidu.com/api?v=2.0&ak=N5k99Bd4TSEVGScmwV4XuEab"></script>
+    </head>
     <title>vue-yincaa-admin</title>
   </head>
   <body>
