--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <link rel="shortcut icon" type="image/x-icon" href="static/favicon.ico">
     <script type="text/javascript" src="http://echarts.baidu.com/gallery/vendors/jquery/jquery.js"></script>
     <script src="http://api.map.baidu.com/api?v=2.0&ak=N5k99Bd4TSEVGScmwV4XuEab"></script>
+
+    <script src="https://cdn.bootcss.com/sockjs-client/1.1.4/sockjs.min.js"></script>
+    <script src="https://cdn.bootcss.com/stomp.js/2.3.3/stomp.min.js"></script>
+    <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
+
     </head>
     <title>鹰瞰智能驾驶安全辅助平台</title>
   </head>
